--- a/lib/l10n/intl_sv.arb
+++ b/lib/l10n/intl_sv.arb
@@ -105,5 +105,6 @@
   "no_private_message_edit_allowed": "Inte tillåtet att redigera privata meddelanden.",
   "post_title_too_long": "Inläggstiteln är för lång.",
   "email_already_exists": "E-post finns redan.",
-  "user_already_exists": "Användaren finns redan."
+  "user_already_exists": "Användaren finns redan.",
+  "number_users_online": "{count,plural, =1{{count} användare inloggad} other{{count} användare inloggade}}"
 }
