--- a/lib/l10n/intl_tr.arb
+++ b/lib/l10n/intl_tr.arb
@@ -91,5 +91,6 @@
   "no_private_message_edit_allowed": "Şahsa özel mesajı düzenlemek mümkün değil.",
   "post_title_too_long": "Paylaşım başlığı çok uzun.",
   "email_already_exists": "Böyle bir e-mail adresi zaten var.",
-  "user_already_exists": "Böyle bir kullanıcı zaten var."
+  "user_already_exists": "Böyle bir kullanıcı zaten var.",
+  "number_users_online": "{count,plural, =1{{count} Kullanıcı Hatta} other{{count} Kullanıcı Hatta}}"
 }
