--- a/lib/l10n/intl_el.arb
+++ b/lib/l10n/intl_el.arb
@@ -105,5 +105,6 @@
   "no_private_message_edit_allowed": "Δεν επιτρέπεται η επεξεργασία του προσωπικού μηνύματος.",
   "post_title_too_long": "Η επικεφαλίδα της δημοσίευσης είναι υπερβολικά μεγάλη.",
   "email_already_exists": "Η διεύθυνση ηλεκτρονικού ταχυδρομείου υπάρχει ήδη.",
-  "user_already_exists": "Ο χρήστης υπάρχει ήδη."
+  "user_already_exists": "Ο χρήστης υπάρχει ήδη.",
+  "number_users_online": "{count,plural, =1{{count} ενεργός χρήστης} other{{count} ενεργοί χρήστες}}"
 }
