--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -225,5 +225,11 @@
   "email_already_exists": "Email already exists.",
   "@email_already_exists": {},
   "user_already_exists": "User already exists.",
-  "@user_already_exists": {}
+  "@user_already_exists": {},
+  "number_users_online": "{count,plural, =1{{count} user online} other{{count} users online}}",
+  "@number_users_online": {
+    "placeholders": {
+      "count": {}
+    }
+  }
 }
