--- a/lib/l10n/intl_eu.arb
+++ b/lib/l10n/intl_eu.arb
@@ -105,5 +105,6 @@
   "no_private_message_edit_allowed": "Ezin duzu mezu pribaturik editatu.",
   "post_title_too_long": "Bidalketaren izenburua luzeegia da.",
   "email_already_exists": "Eposta hori dagoeneko existitzen da.",
-  "user_already_exists": "Erabiltzaile hori dagoeneko existitzen da."
+  "user_already_exists": "Erabiltzaile hori dagoeneko existitzen da.",
+  "number_users_online": "{count,plural, =1{Erabiltzaile {count} konektatuta} other{{count} erabiltzaile konektatuta}}"
 }
