--- a/lib/l10n/intl_fi.arb
+++ b/lib/l10n/intl_fi.arb
@@ -90,5 +90,6 @@
   "no_private_message_edit_allowed": "Sinulla ei ole oikeutta muokata yksityisviestiä.",
   "post_title_too_long": "Viestin otsikko on liian pitkä.",
   "email_already_exists": "Sähköposti on jo olemassa.",
-  "user_already_exists": "Käyttäjä on jo olemassa."
+  "user_already_exists": "Käyttäjä on jo olemassa.",
+  "number_users_online": "{count,plural, =1{{count} käyttäjä aktiivisena} other{{count} käyttäjää aktiivisena}}"
 }
