--- a/lib/l10n/intl_fr.arb
+++ b/lib/l10n/intl_fr.arb
@@ -104,5 +104,6 @@
   "no_private_message_edit_allowed": "Pas autorisé à modifier un message privé.",
   "post_title_too_long": "Le titre de la publication est trop long.",
   "email_already_exists": "L’email existe déjà.",
-  "user_already_exists": "L’utilisateur·rice existe déjà."
+  "user_already_exists": "L’utilisateur·rice existe déjà.",
+  "number_users_online": "{count,plural, =1{{count} Utilisateur en ligne} other{{count} Utilisateurs en ligne}}"
 }
