--- a/lib/l10n/intl_ka.arb
+++ b/lib/l10n/intl_ka.arb
@@ -86,5 +86,6 @@
   "couldnt_update_post": "პოსტი ვერ განახლდა",
   "post_title_too_long": "პოსტის სათაური ძალიან გრძელია.",
   "email_already_exists": "ელ-პოსტა უკვე არსებობს.",
-  "user_already_exists": "მომხმარებელი უკვე არსებობს."
+  "user_already_exists": "მომხმარებელი უკვე არსებობს.",
+  "number_users_online": "{count,plural, =1{მომხმარებელი საიტზე} other{მომხმარებელი საიტზე}}"
 }
