--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -105,5 +105,6 @@
   "no_private_message_edit_allowed": "개인 메시지를 편집 할 수 없습니다.",
   "post_title_too_long": "게시물 제목이 너무 깁니다.",
   "email_already_exists": "이메일이 이미 존재합니다.",
-  "user_already_exists": "사용자가 이미 존재합니다."
+  "user_already_exists": "사용자가 이미 존재합니다.",
+  "number_users_online": "{count,plural, =1{접속자수 {count}}}"
 }
