--- a/lib/l10n/intl_sq.arb
+++ b/lib/l10n/intl_sq.arb
@@ -91,5 +91,6 @@
   "no_private_message_edit_allowed": "Nuk lejohet redaktimi i mesazhit privat.",
   "post_title_too_long": "Titulli i postimit ishte shumë i gjatë.",
   "email_already_exists": "Email-i tashmë ekziston.",
-  "user_already_exists": "Përdoruesi tashmë ekziston."
+  "user_already_exists": "Përdoruesi tashmë ekziston.",
+  "number_users_online": "{count,plural, =1{{count} Përdorues Online} other{{count} Përdoruesa Online}}"
 }
