--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -105,5 +105,6 @@
   "no_private_message_edit_allowed": "没有编辑私信的权限。",
   "post_title_too_long": "帖子标题过长。",
   "email_already_exists": "邮箱已占用.",
-  "user_already_exists": "用户已存在。"
+  "user_already_exists": "用户已存在。",
+  "number_users_online": "{count,plural, =1{{count} 在线用户} other{{count} 名在线用户}}"
 }
