--- a/lib/l10n/intl_el.arb
+++ b/lib/l10n/intl_el.arb
@@ -106,5 +106,7 @@
   "post_title_too_long": "Η επικεφαλίδα της δημοσίευσης είναι υπερβολικά μεγάλη.",
   "email_already_exists": "Η διεύθυνση ηλεκτρονικού ταχυδρομείου υπάρχει ήδη.",
   "user_already_exists": "Ο χρήστης υπάρχει ήδη.",
-  "number_users_online": "{count,plural, =1{{count} ενεργός χρήστης} other{{count} ενεργοί χρήστες}}"
+  "number_users_online": "{count,plural, =1{{count} ενεργός χρήστης} other{{count} ενεργοί χρήστες}}",
+  "number_of_comments": "{count,plural, =1{{count} Σχόλιο} other{{count} Σχόλια}}",
+  "number_of_posts": "{count,plural, =1{{count} Δημοσίευση} other{{count} Δημοσιεύσεις}}"
 }
