--- a/lib/l10n/intl_eo.arb
+++ b/lib/l10n/intl_eo.arb
@@ -106,5 +106,7 @@
   "post_title_too_long": "Titolo de afiŝo estas tro longa.",
   "email_already_exists": "Retpoŝtadreso jam ekzistas.",
   "user_already_exists": "Uzanto jam ekzistas.",
-  "number_users_online": "{count,plural, =1{{count} uzanto enreta} other{{count} uzantoj enretaj}}"
+  "number_users_online": "{count,plural, =1{{count} uzanto enreta} other{{count} uzantoj enretaj}}",
+  "number_of_comments": "{count,plural, =1{{count} komento} other{{count} komentoj}}",
+  "number_of_posts": "{count,plural, =1{{count} afiŝo} other{{count} afiŝoj}}"
 }
