--- a/lib/l10n/intl_fa.arb
+++ b/lib/l10n/intl_fa.arb
@@ -68,5 +68,7 @@
   "couldnt_update_post": "ناتوای در به‌روزرسانی مطلب",
   "email_already_exists": "این رایانامه از قبل وجود دارد.",
   "user_already_exists": "این کاربر از قبل وجود دارد.",
-  "number_users_online": "{count,plural, =1{{count} کاربر برخط}}"
+  "number_users_online": "{count,plural, =1{{count} کاربر برخط}}",
+  "number_of_comments": "{count,plural, =1{{count} نظر}}",
+  "number_of_posts": "{count,plural, =1{{count} مطلب}}"
 }
