--- a/lib/l10n/intl_fr.arb
+++ b/lib/l10n/intl_fr.arb
@@ -20,7 +20,7 @@
   "replies": "Réponses",
   "mentions": "Mentions",
   "from": "de",
-  "to": "vers",
+  "to": "dans",
   "deleted_by_creator": "supprimé par le créateur",
   "more": "plus",
   "mark_as_read": "marquer comme lu",
@@ -105,5 +105,7 @@
   "post_title_too_long": "Le titre de la publication est trop long.",
   "email_already_exists": "L’email existe déjà.",
   "user_already_exists": "L’utilisateur·rice existe déjà.",
-  "number_users_online": "{count,plural, =1{{count} Utilisateur en ligne} other{{count} Utilisateurs en ligne}}"
+  "number_users_online": "{count,plural, =1{{count} Utilisateur en ligne} other{{count} Utilisateurs en ligne}}",
+  "number_of_comments": "{count,plural, =1{{count} Commentaire} other{{count} Commentaires}}",
+  "number_of_posts": "{count,plural, =1{{count} Publication} other{{count} Publications}}"
 }
