--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -20,7 +20,7 @@
   "replies": "댓글",
   "mentions": "언급",
   "from": "에서",
-  "to": ">>",
+  "to": "to",
   "deleted_by_creator": "글쓴이에 의해 삭제됨",
   "more": "더 보기",
   "mark_as_read": "읽은 상태로 표시",
@@ -106,5 +106,7 @@
   "post_title_too_long": "게시물 제목이 너무 깁니다.",
   "email_already_exists": "이메일이 이미 존재합니다.",
   "user_already_exists": "사용자가 이미 존재합니다.",
-  "number_users_online": "{count,plural, =1{접속자수 {count}}}"
+  "number_users_online": "{count,plural, =1{접속자수 {count}}}",
+  "number_of_comments": "{count,plural, =1{덧글수 {count}}}",
+  "number_of_posts": "{count,plural, =1{게시물 수 {count}}}"
 }
