--- a/lib/l10n/intl_pt_BR.arb
+++ b/lib/l10n/intl_pt_BR.arb
@@ -102,5 +102,7 @@
   "post_title_too_long": "Título da publicação muito longo.",
   "email_already_exists": "Este e-mail já existe.",
   "user_already_exists": "Este usuário já existe.",
-  "number_users_online": "{count,plural, =1{{count} usuário online} other{{count} usuários online}}"
+  "number_users_online": "{count,plural, =1{{count} usuário online} other{{count} usuários online}}",
+  "number_of_comments": "{count,plural, =1{{count} comentário} other{{count} comentários}}",
+  "number_of_posts": "{count,plural, =1{{count} publicação} other{{count} publicações}}"
 }
