--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -106,5 +106,7 @@
   "post_title_too_long": "帖子标题过长。",
   "email_already_exists": "邮箱已占用.",
   "user_already_exists": "用户已存在。",
-  "number_users_online": "{count,plural, =1{{count} 在线用户} other{{count} 名在线用户}}"
+  "number_users_online": "{count,plural, =1{{count} 在线用户} other{{count} 名在线用户}}",
+  "number_of_comments": "{count,plural, =1{{count} 条评论} other{{count} 条评论}}",
+  "number_of_posts": "{count,plural, =1{{count} 个帖子} other{{count} 条帖子}}"
 }
