--- a/lib/l10n/intl_fr.arb
+++ b/lib/l10n/intl_fr.arb
@@ -107,5 +107,8 @@
   "user_already_exists": "L’utilisateur·rice existe déjà.",
   "number_users_online": "{count,plural, =1{{count} Utilisateur en ligne} other{{count} Utilisateurs en ligne}}",
   "number_of_comments": "{count,plural, =1{{count} Commentaire} other{{count} Commentaires}}",
-  "number_of_posts": "{count,plural, =1{{count} Publication} other{{count} Publications}}"
+  "number_of_posts": "{count,plural, =1{{count} Publication} other{{count} Publications}}",
+  "number_of_subscribers": "{count,plural, =1{{count} Abonné} other{{count} Abonnés}}",
+  "unsubscribe": "Se désabonner",
+  "subscribe": "S’abonner"
 }
