--- a/lib/l10n/intl_de.arb
+++ b/lib/l10n/intl_de.arb
@@ -104,5 +104,8 @@
   "user_already_exists": "Nutzer existiert bereits.",
   "number_users_online": "{count,plural, =1{{count} Benutzer online} other{{count} Benutzer*innen online}}",
   "number_of_comments": "{count,plural, =1{{count} Kommentar} other{{count} Kommentare}}",
-  "number_of_posts": "{count,plural, =1{{count} Beitrag} other{{count} Beiträge}}"
+  "number_of_posts": "{count,plural, =1{{count} Beitrag} other{{count} Beiträge}}",
+  "number_of_subscribers": "{count,plural, =1{{count} Abonnent} other{{count} Abonnent*innen}}",
+  "unsubscribe": "Deabonnieren",
+  "subscribe": "Abonnieren"
 }
