--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -108,5 +108,8 @@
   "user_already_exists": "El usuario ya existe.",
   "number_users_online": "{count,plural, =1{{count} usuario en línea} other{{count} usuarios en línea}}",
   "number_of_comments": "{count,plural, =1{{count} Comentario} other{{count} Comentarios}}",
-  "number_of_posts": "{count,plural, =1{{count} Publicación} other{{count} Publicaciones}}"
+  "number_of_posts": "{count,plural, =1{{count} Publicación} other{{count} Publicaciones}}",
+  "number_of_subscribers": "{count,plural, =1{{count} suscriptor} other{{count} suscriptores}}",
+  "unsubscribe": "Desuscribirse",
+  "subscribe": "Suscribirse"
 }
