--- a/lib/l10n/intl_fi.arb
+++ b/lib/l10n/intl_fi.arb
@@ -93,5 +93,8 @@
   "user_already_exists": "Käyttäjä on jo olemassa.",
   "number_users_online": "{count,plural, =1{{count} käyttäjä aktiivisena} other{{count} käyttäjää aktiivisena}}",
   "number_of_comments": "{count,plural, =1{{count} kommentti} other{{count} kommenttia}}",
-  "number_of_posts": "{count,plural, =1{{count} viesti} other{{count} viestiä}}"
+  "number_of_posts": "{count,plural, =1{{count} viesti} other{{count} viestiä}}",
+  "number_of_subscribers": "{count,plural, =1{{count} tilaaja} other{{count} tilaajaa}}",
+  "unsubscribe": "Poista tilaus",
+  "subscribe": "Tilaa"
 }
