--- a/lib/l10n/intl_hu.arb
+++ b/lib/l10n/intl_hu.arb
@@ -94,5 +94,8 @@
   "user_already_exists": "A felhasználó már létezik.",
   "number_users_online": "{count,plural, =1{{count} online felhasználó} other{{count} online felhasználó}}",
   "number_of_comments": "{count,plural, =1{{count} hozzászólás} other{{count} hozzászólás}}",
-  "number_of_posts": "{count,plural, =1{{count} bejegyzés} other{{count} bejegyzés}}"
+  "number_of_posts": "{count,plural, =1{{count} bejegyzés} other{{count} bejegyzés}}",
+  "number_of_subscribers": "{count,plural, =1{{count} feliratkozó} other{{count} feliratkozó}}",
+  "unsubscribe": "Leiratkozás",
+  "subscribe": "Feliratkozás"
 }
