--- a/lib/l10n/intl_ja.arb
+++ b/lib/l10n/intl_ja.arb
@@ -96,5 +96,8 @@
   "user_already_exists": "ユーザーは既に存在します。",
   "number_users_online": "{count,plural, =1{{count} 名のユーザーがオンライン}}",
   "number_of_comments": "{count,plural, =1{{count} 件のコメント}}",
-  "number_of_posts": "{count,plural, =1{{count} 件の投稿}}"
+  "number_of_posts": "{count,plural, =1{{count} 件の投稿}}",
+  "number_of_subscribers": "{count,plural, =1{{count} 名の登録者}}",
+  "unsubscribe": "登録解除",
+  "subscribe": "登録"
 }
