--- a/lib/l10n/intl_ka.arb
+++ b/lib/l10n/intl_ka.arb
@@ -89,5 +89,8 @@
   "user_already_exists": "მომხმარებელი უკვე არსებობს.",
   "number_users_online": "{count,plural, =1{მომხმარებელი საიტზე} other{მომხმარებელი საიტზე}}",
   "number_of_comments": "{count,plural, =1{კომენტარი} other{კომანტარები}}",
-  "number_of_posts": "{count,plural, =1{თარგმნა} other{თარგმნა}}"
+  "number_of_posts": "{count,plural, =1{თარგმნა} other{თარგმნა}}",
+  "number_of_subscribers": "{count,plural, =1{გამომწერი} other{გამომწერები}}",
+  "unsubscribe": "გამოწერის გაუქმნება",
+  "subscribe": "გამოწერა"
 }
