--- a/lib/l10n/intl_pl.arb
+++ b/lib/l10n/intl_pl.arb
@@ -107,5 +107,7 @@
   "no_private_message_edit_allowed": "Brak uprawnień do edycji prywatnej wiadomości.",
   "post_title_too_long": "Tytuł posta zbyt długi.",
   "email_already_exists": "Email już istnieje.",
-  "user_already_exists": "Użytkownik już istnieje."
+  "user_already_exists": "Użytkownik już istnieje.",
+  "unsubscribe": "Odsubskrybuj",
+  "subscribe": "Subskrybuj"
 }
