--- a/lib/l10n/intl_sv.arb
+++ b/lib/l10n/intl_sv.arb
@@ -108,5 +108,8 @@
   "user_already_exists": "Användaren finns redan.",
   "number_users_online": "{count,plural, =1{{count} användare inloggad} other{{count} användare inloggade}}",
   "number_of_comments": "{count,plural, =1{{count} kommentar} other{{count} kommentarer}}",
-  "number_of_posts": "{count,plural, =1{{count} inlägg} other{{count} inlägg}}"
+  "number_of_posts": "{count,plural, =1{{count} inlägg} other{{count} inlägg}}",
+  "number_of_subscribers": "{count,plural, =1{{count} prenumerant} other{{count} prenumeranter}}",
+  "unsubscribe": "Avsluta prenumeration",
+  "subscribe": "Prenumerera"
 }
