--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -108,5 +108,8 @@
   "user_already_exists": "用户已存在。",
   "number_users_online": "{count,plural, =1{{count} 在线用户} other{{count} 名在线用户}}",
   "number_of_comments": "{count,plural, =1{{count} 条评论} other{{count} 条评论}}",
-  "number_of_posts": "{count,plural, =1{{count} 个帖子} other{{count} 条帖子}}"
+  "number_of_posts": "{count,plural, =1{{count} 个帖子} other{{count} 条帖子}}",
+  "number_of_subscribers": "{count,plural, =1{{count} 订阅者} other{{count} 名订阅者}}",
+  "unsubscribe": "取消订阅",
+  "subscribe": "订阅"
 }
